pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs
  namespace: project1
spec:
  containers:
  - name: nodejs-ctr
    image: nodejs:19.5.0
    ports: 
    - containerPort: 80
