service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: project1
spec:
  type: LoadBalancer
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
