ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nodejs
  namespace: project1
spec:
  rules:
  - host: "nodenjs.example.info"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nodejs-service
              port:
                number: 80
